// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TasksDonutCard render with last selected 1`] = `
<Card
  className="tasks-donut-card selected-tasks-card"
>
  <CardTitle
    onClick={[Function]}
  />
  <CardBody
    className="card-pf-body"
  >
    <TasksDonutChart
      className=""
      colorsPattern={
        Array [
          "#C315C7",
          "#0089C9",
        ]
      }
      focusedOn="last"
      last={0}
      older={0}
      onLastClick={[Function]}
      onOlderClick={[Function]}
      onTotalClick={[Function]}
      time="week"
    />
  </CardBody>
</Card>
`;

exports[`TasksDonutCard render with minimal props 1`] = `
<Card
  className="tasks-donut-card"
>
  <CardTitle
    onClick={[Function]}
  />
  <CardBody
    className="card-pf-body"
  >
    <TasksDonutChart
      className=""
      colorsPattern={
        Array [
          "#C315C7",
          "#0089C9",
        ]
      }
      focusedOn="normal"
      last={0}
      older={0}
      onLastClick={[Function]}
      onOlderClick={[Function]}
      onTotalClick={[Function]}
      time="24h"
    />
  </CardBody>
</Card>
`;

exports[`TasksDonutCard render with older selected 1`] = `
<Card
  className="tasks-donut-card selected-tasks-card"
>
  <CardTitle
    onClick={[Function]}
  />
  <CardBody
    className="card-pf-body"
  >
    <TasksDonutChart
      className=""
      colorsPattern={
        Array [
          "#C315C7",
          "#0089C9",
        ]
      }
      focusedOn="older"
      last={0}
      older={0}
      onLastClick={[Function]}
      onOlderClick={[Function]}
      onTotalClick={[Function]}
      time="week"
    />
  </CardBody>
</Card>
`;

exports[`TasksDonutCard render with props 1`] = `
<Card
  className="tasks-donut-card some-classname"
>
  <CardTitle
    onClick={[Function]}
  >
    some title
  </CardTitle>
  <CardBody
    className="card-pf-body"
  >
    <TasksDonutChart
      className=""
      colorsPattern={
        Array [
          "#C315C7",
          "#0089C9",
        ]
      }
      focusedOn="normal"
      last={3}
      older={5}
      onLastClick={[Function]}
      onOlderClick={[Function]}
      onTotalClick={[Function]}
      time="week"
    />
  </CardBody>
</Card>
`;

exports[`TasksDonutCard render with total selected 1`] = `
<Card
  className="tasks-donut-card selected-tasks-card"
>
  <CardTitle
    onClick={[Function]}
  />
  <CardBody
    className="card-pf-body"
  >
    <TasksDonutChart
      className=""
      colorsPattern={
        Array [
          "#C315C7",
          "#0089C9",
        ]
      }
      focusedOn="total"
      last={0}
      older={0}
      onLastClick={[Function]}
      onOlderClick={[Function]}
      onTotalClick={[Function]}
      time="24h"
    />
  </CardBody>
</Card>
`;
